# cmake-build-boost-lib

./: .gitignore  CMakeLists.txt  CMakePre.cmake  CMakePresets.json  readme.md
src/: main.cpp
